// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThoughtChain Component ThoughtChain component work 1`] = `
<div
  class="ant-thought-chain ant-thought-chain-middle"
>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-success-error"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
        >
          <strong>
            <span
              aria-label="right"
              class="anticon anticon-right ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-error-pending"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
        >
          <strong>
            <span
              aria-label="right"
              class="anticon anticon-right ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-pending-pending"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
        >
          <strong>
            <span
              aria-label="right"
              class="anticon anticon-right ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
</div>
`;

exports[`ThoughtChain Component rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-thought-chain css-var-r1 ant-thought-chain-rtl ant-thought-chain-middle"
>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-success-error"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-r1 ant-avatar-css-var ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title css-var-r1"
        >
          <strong>
            <span
              aria-label="left"
              class="anticon anticon-left ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-rtl ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc css-var-r1"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-error-pending"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-r1 ant-avatar-css-var ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title css-var-r1"
        >
          <strong>
            <span
              aria-label="left"
              class="anticon anticon-left ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-rtl ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc css-var-r1"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-pending-pending"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-r1 ant-avatar-css-var ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title css-var-r1"
        >
          <strong>
            <span
              aria-label="left"
              class="anticon anticon-left ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-rtl ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc css-var-r1"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
</div>
`;

exports[`ThoughtChain Component test theme component should be rendered correctly when configuring the theme.components 1`] = `
<div
  class="ant-thought-chain css-var-rl ant-thought-chain-middle"
>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-success-error"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-rl ant-avatar-css-var ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title css-var-rl"
        >
          <strong>
            <span
              aria-label="right"
              class="anticon anticon-right ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc css-var-rl"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-error-pending"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-rl ant-avatar-css-var ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title css-var-rl"
        >
          <strong>
            <span
              aria-label="right"
              class="anticon anticon-right ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc css-var-rl"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
  <div
    class="ant-thought-chain-item ant-thought-chain-item-pending-pending"
  >
    <div
      class="ant-thought-chain-item-header"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-rl ant-avatar-css-var ant-thought-chain-item-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </span>
      <div
        class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title css-var-rl"
        >
          <strong>
            <span
              aria-label="right"
              class="anticon anticon-right ant-thought-chain-item-collapse-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            Thought Chain Item Title
          </strong>
        </span>
        <span
          class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc css-var-rl"
        >
          description
        </span>
      </div>
      <div
        class="ant-thought-chain-item-extra"
      >
        Extra
      </div>
    </div>
    <div
      class="ant-thought-chain-item-footer"
    >
      Thought Chain Item Footer
    </div>
  </div>
</div>
`;
